test/libyul/yulSyntaxTests/invalid/unicode_comment_direction_override.sol
{
    // pop 1
    // underflow ‬
}
// ----
// ParserError 1465: (19-32='// underflow'): Illegal token: Unicode direction override underflow in comment or string literal.
